--- a/example04/src/index.css
+++ b/example04/src/index.css
@@ -9,3 +9,29 @@ body, html, #root {
     linear-gradient(to top right, rgb(252, 205, 96), transparent);
   background-blend-mode: screen;
 }
+
+.information {
+  border-radius: 12px;
+  padding: 5px 20px;
+  height: auto;
+  background: rgba(233,48,48,0.6);
+  color: white;
+  white-space: nowrap;
+  font-size: 22px;
+}
+.information.enter {
+  width: 30px;
+  padding: 10px;
+  background: #fff;
+  font-size: 13px;
+}
+.information.enter img {
+  width: 100%;
+  height: auto;
+}
+.information.enter p {
+  margin: 0;
+  padding: 0;
+  margin-top: 0.5rem;
+  color: #000;
+}
